traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:19: error: value &&! is not a member of Boolean
    if (doupas&&!estFaceMur) {
              ^